--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "firebase": "^8.2.3",
-    "firebaseui": "^4.7.1"
+    "firebaseui": "^4.7.1",
+    "table-dragger": "^1.0.3"
   }
 }
